--- a/public/material.html
+++ b/public/material.html
@@ -166,57 +166,40 @@
                                 <p>“No existen individuos carentes de creatividad, solo existen personas más o menos frenadas, calcificadas o aletargadas que requieren un adiestramiento” (Castelló y del Pino, 2019, p.39, basado en Aznar, Ferrer y de Bas,1996).</p><img class="img-a img-fluid" src="assets/images/pages/ilustraciones/Grupo_14118.svg">
                             </div>
                         </div>
-                    </div>
-                    <div class="jumbotron bg-white mt-0"><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14132.svg">
-                        <p>Las soluciones creativas son fruto de un trabajo previo intenso que incluye el ensayo y el error en pruebas, es producto de aproximaciones y de cambios.</p>
-                        <p>Desde los ámbitos de la psicología y la pedagogía, la investigación científica y las teorías no deterministas han permitido desmitificar la visión de la creatividad como una cualidad casi mística que solo algunos individuos poseen. Autores como Amabile (1983), Golen (1983), Boden (1994), Csikszentmihaly y Colodrón (1999) o Sternberg (2006), entienden la creatividad como una capacidad que puede ser desarrollada y que, en consecuencia, puede ser estimulada y enseñada, haciendo especial hincapié en la importancia de la actitud, la motivación y las características del entorno del individuo –el contexto social, cultural, educativo, histórico, etc.– Maslow (1985) consideraba la creatividad como una habilidad deseable en cualquier campo profesional. (Castelló y del Pino, 2019, p.39)</p><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14117.svg">
-                        <div class="col-2"> </div>
-                        <p>En el ámbito de la publicidad y la comunicación, la creatividad se hace necesaria e indispensable, ya que los anunciantes están siempre en la búsqueda de agencias o publicistas que realicen para ellos anuncios que marquen la diferencia y den un toque de originalidad y diferenciación a sus productos frente a la competencia. Sin embargo, en la realización publicitaria la creatividad tiene cabida en todos los frentes: medios, estrategias, redacción de textos, creación de imágenes, merchandising y promoción de ventas.<img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14119.svg"></p>
-                    </div>
-                    <div class="jumbotron bg-white">
-                        <div class="col">
-                            <h1>1.3. El proceso creativo<h2>El proceso creativo implica varios aspectos:</h2>
-                            </h1>
+                        <div class="recuadro-gris"><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14132.svg">
+                            <p>Las soluciones creativas son fruto de un trabajo previo intenso que incluye el ensayo y el error en pruebas, es producto de aproximaciones y de cambios.</p>
+                            <p>Desde los ámbitos de la psicología y la pedagogía, la investigación científica y las teorías no deterministas han permitido desmitificar la visión de la creatividad como una cualidad casi mística que solo algunos individuos poseen. Autores como Amabile (1983), Golen (1983), Boden (1994), Csikszentmihaly y Colodrón (1999) o Sternberg (2006), entienden la creatividad como una capacidad que puede ser desarrollada y que, en consecuencia, puede ser estimulada y enseñada, haciendo especial hincapié en la importancia de la actitud, la motivación y las características del entorno del individuo –el contexto social, cultural, educativo, histórico, etc.– Maslow (1985) consideraba la creatividad como una habilidad deseable en cualquier campo profesional. (Castelló y del Pino, 2019, p.39)</p><img class="img-a my-3 img-fluid mt-5" src="assets/images/pages/ilustraciones/Grupo_14117.svg">
+                            <div class="col-2"> </div>
+                            <p>En el ámbito de la publicidad y la comunicación, la creatividad se hace necesaria e indispensable, ya que los anunciantes están siempre en la búsqueda de agencias o publicistas que realicen para ellos anuncios que marquen la diferencia y den un toque de originalidad y diferenciación a sus productos frente a la competencia. Sin embargo, en la realización publicitaria la creatividad tiene cabida en todos los frentes: medios, estrategias, redacción de textos, creación de imágenes, merchandising y promoción de ventas.<img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14119.svg"></p>
                         </div>
                     </div>
-                    <div class="jumbotron bg-2 mt-5">
+                    <div class="jumbotron bg-white">
                         <div class="row justify-content-center align-items-center">
-                            <div class="col-12">
+                            <div class="col">
+                                <h1>1.3. El proceso creativo<h2>El proceso creativo implica varios aspectos:</h2>
+                                </h1>
+                            </div>
+                            <div class="recuadro-yellow">
                                 <p>Fluidez: esta característica se refiere a la generación copiosa y rápida de ideas; para el desarrollo de una gran idea es necesario tener cientos de ellas.</p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="jumbotron bg-2 mt-5">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="col-12">
+                            <div class="recuadro-yellow">
                                 <p>Flexibilidad: el desarrollo creativo implica el poder de la adaptación, las ideas pueden llegar desde cualquier dirección y es necesario tener la capacidad de tomar una alternativa y convertirla en solución. La flexibilidad implica también el rechazo de ideas valiosas que por una u otras circunstancias pierden aplicabilidad. El creativo debe ser flexible para poder adaptar cualquiera de ellas de la forma más adecuada posible para generar soluciones eficientes. </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="jumbotron bg-white"> <img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14135.svg"></div>
-                    <div class="jumbotron bg-2 mt-5">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="col-12">
+                            </div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14135.svg">
+                            <div class="recuadro-yellow">
                                 <p>Originalidad: la originalidad no se refiere necesariamente a que algo es único o irrepetible, las ideas originales pueden darse también a través de la forma como se llevan a cabo o se presentan, aquí es donde se hace presente el pensamiento lateral; es decir, pensar de una forma un poco diferente de lo que pensaría el común de la gente, entendido como la realización de acciones con otras versiones diferentes. </p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="jumbotron bg-2 mt-5">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="col-12">
+                            <div class="recuadro-yellow">
                                 <p>Ejecución: en ocasiones, el llevar a cabo una idea es más complejo que plantearla; por ello, el creativo debe ser también un realizador de ella y saber acudir a los recursos disponibles para llevarla a cabo. Muchas veces es en su ejecución, en donde esta se convierte en grande y es en ese momento, donde el profesional debe tener la capacidad de tomar cualquier idea, transformarla, mejorarla y generar con ella soluciones innovadoras.</p>
+                                <p>Para llevar a cabo el proceso creativo, es importante contar con toda la información posible del problema que se busca solucionar, así como tener claro que la creatividad no es un chispazo que llega de la nada generando ideas asombrosas; por el contrario, implica un diagnóstico previo de las situaciones para las que se están generando ideas, ya que suena imposible pensar en algo que no se conoce o de lo que no se sabe nada. Es por esto por lo que, en campos como la publicidad, el diseño o la producción audiovisual, el primer paso para el desarrollo creativo sea el brief.</p>
+                                <p>Para el desarrollo de la creatividad, no hay una fórmula mágica, porque no todas las personas piensan de la misma manera, pues para algunas es más efectivo meditar, para otros caminar y para otros tomar notas y hacer dibujos o mamarrachos en una hoja; lo cierto, es que todas las personas son creativas, la diferencia radica en que algunas tienen ideas constantemente y las llevan a cabo.</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="jumbotron bg-white">
-                        <p>Para llevar a cabo el proceso creativo, es importante contar con toda la información posible del problema que se busca solucionar, así como tener claro que la creatividad no es un chispazo que llega de la nada generando ideas asombrosas; por el contrario, implica un diagnóstico previo de las situaciones para las que se están generando ideas, ya que suena imposible pensar en algo que no se conoce o de lo que no se sabe nada. Es por esto por lo que, en campos como la publicidad, el diseño o la producción audiovisual, el primer paso para el desarrollo creativo sea el brief.</p>
-                        <p>Para el desarrollo de la creatividad, no hay una fórmula mágica, porque no todas las personas piensan de la misma manera, pues para algunas es más efectivo meditar, para otros caminar y para otros tomar notas y hacer dibujos o mamarrachos en una hoja; lo cierto, es que todas las personas son creativas, la diferencia radica en que algunas tienen ideas constantemente y las llevan a cabo.</p>
-                        <p>A continuación, se verán algunos de los métodos más populares para el proceso creativo y la forma como se llevan a cabo. Se relacionan, sobre todo, los más utilizados en el desarrollo de estrategias de comunicación y publicidad:</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/linebreak.svg">
                     </div>
                     <div class="jumbotron bg-white mt-5">
                         <div class="sub-ecored">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-auto"> </div><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14173.svg">
+                                <div class="col-auto"> </div>
+                                <p>A continuación, se verán algunos de los métodos más populares para el proceso creativo y la forma como se llevan a cabo. Se relacionan, sobre todo, los más utilizados en el desarrollo de estrategias de comunicación y publicidad:</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/Grupo_14173.svg">
                                 <div class="col-2"> </div>
                                 <h2>1.3.1. Técnicas creativas</h2>
                                 <p>Las técnicas creativas implican el desarrollo de métodos que permiten ver las situaciones desde diferentes aspectos. Para la mayoría de las personas es complicado pensar lateralmente; es decir, salir de lo convencional y proponer soluciones prácticas, pero no comunes. Estas técnicas incentivan el pensamiento disruptivo, la creación de nuevas ideas, el mejoramiento de las ya existentes o la adecuación de soluciones anteriores a problemas actuales.</p>
