--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="header-ecored"></div>
-    <div class="jumbotron bg-white">
+    <div class="jumbotron bg-white"></div>
+    <div class="sub-ecored mt-5" id="tema2_1">
         <h1>2. La estrategia creativa</h1>
         <div class="embed-responsive embed-responsive-16by9 mt-5"><iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/hyaC1DOSYE8" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
         <p>La estrategia creativa es el proceso intelectual que lleva al desarrollo de tácticas para la elaboración de una idea, permaneciendo en la mente de los consumidores de una marca, producto o servicio. La estrategia creativa debe ir ligada a la marca, ambos deben contemplar el mismo concepto.</p>
@@ -11,6 +12,7 @@
         <div class="sub-ecored-teme"></div>
         <div class="row justify-content-center align-items-center"></div>
         <div class="col-auto"> </div>
+        <div class="sub-ecored mt-5" id="tema2_2"></div>
         <h2>2.1 Desarrollo de la estrategia</h2><img class="img-a my-5 img-fluid" src="assets/images/pages/ilustraciones/men.svg" />
         <p>La estrategia creativa es un proceso de desarrollo de ideas para la comunicación publicitaria, busca que la interacción entre el cliente y la marca sea lo más efectiva posible. Además, incluye varios elementos: objetivos, target comunicacional y concepto creativo.</p><img class="img-a my-3 img-fluid" src="assets/images/pages/ilustraciones/linebreak.svg" />
         <h3>Objetivos</h3>
